[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/fonts/font_square_mini.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/hangar/BaySign.gd" type="Script" id=2]
[ext_resource path="res://ui/headshots.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.0627451, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="AtlasTexture" id=4]
resource_local_to_scene = true
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 80 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
flags_vertex_lighting = true
flags_do_not_receive_shadows = true
albedo_texture = SubResource( 1 )

[sub_resource type="QuadMesh" id=3]
size = Vector2( 1, 0.5 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.2, 0.2, 0.2, 1 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 1, 0.5, 0.05 )

[node name="BaySign" type="Spatial"]
script = ExtResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 256, 128 )
transparent_bg = true
render_target_v_flip = true

[node name="Body" type="PanelContainer" parent="Viewport"]
margin_right = 256.0
margin_bottom = 128.0
rect_min_size = Vector2( 256, 128 )
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PilotInfo" type="VBoxContainer" parent="Viewport/Body"]
margin_left = 2.0
margin_top = 2.0
margin_right = 254.0
margin_bottom = 126.0

[node name="Portrait" type="MarginContainer" parent="Viewport/Body/PilotInfo"]
margin_right = 252.0
margin_bottom = 80.0

[node name="TeamColor" type="ColorRect" parent="Viewport/Body/PilotInfo/Portrait"]
margin_right = 252.0
margin_bottom = 80.0

[node name="PilotFace" type="TextureRect" parent="Viewport/Body/PilotInfo/Portrait"]
margin_right = 252.0
margin_bottom = 80.0
texture = SubResource( 4 )
stretch_mode = 6

[node name="PilotName" type="Label" parent="Viewport/Body/PilotInfo"]
margin_top = 84.0
margin_right = 252.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "PILOT NAME"
align = 1

[node name="Sign" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.051 )
material_override = SubResource( 2 )
mesh = SubResource( 3 )
material/0 = null

[node name="Back" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.025 )
material_override = SubResource( 7 )
mesh = SubResource( 8 )
material/0 = null
